.idea/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <formula>IF( 
Contract_PO_Duration__c &gt; 12,
(Estimated_Monthly_Amount__c * 12 ),
(Estimated_Monthly_Amount__c * Contract_PO_Duration__c)
)</formula>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$50K</fullName>
                </value>
                <value>
                    <fullName>$50-100K</fullName>
                </value>
                <value>
                    <fullName>$100-$500K</fullName>
                </value>
                <value>
                    <fullName>&gt;$500K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CERCOMPLETED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CER Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLASSIFICATION__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>Chemical Production</fullName>
                </value>
                <value>
                    <fullName>Collection Interceptors/Large PS</fullName>
                </value>
                <value>
                    <fullName>Collection Small Systems</fullName>
                </value>
                <value>
                    <fullName>Cooling Tower</fullName>
                </value>
                <value>
                    <fullName>Disinfection</fullName>
                </value>
                <value>
                    <fullName>Drinking Water</fullName>
                </value>
                <value>
                    <fullName>Food Processing</fullName>
                </value>
                <value>
                    <fullName>Gas Scrubbing</fullName>
                </value>
                <value>
                    <fullName>Groundwater</fullName>
                </value>
                <value>
                    <fullName>In-Plant Solids</fullName>
                </value>
                <value>
                    <fullName>In-Plant WW</fullName>
                </value>
                <value>
                    <fullName>In-situ</fullName>
                </value>
                <value>
                    <fullName>Landfill</fullName>
                </value>
                <value>
                    <fullName>Metal Pickling</fullName>
                </value>
                <value>
                    <fullName>NOx / SOx</fullName>
                </value>
                <value>
                    <fullName>OGR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PAA</fullName>
                </value>
                <value>
                    <fullName>Ponds/Lagoons</fullName>
                </value>
                <value>
                    <fullName>Pulp Mill</fullName>
                </value>
                <value>
                    <fullName>Rapid Response</fullName>
                </value>
                <value>
                    <fullName>Remediation</fullName>
                </value>
                <value>
                    <fullName>Soil</fullName>
                </value>
                <value>
                    <fullName>Surface Water</fullName>
                </value>
                <value>
                    <fullName>Trojan ECT</fullName>
                </value>
                <value>
                    <fullName>Upstream OGR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemical_Global__c</fullName>
        <label>Chemical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Chemical</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemical__c</fullName>
        <label>Chemical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hydrogen Peroxide</fullName>
                </value>
                <value>
                    <fullName>Ferrous Chloride</fullName>
                </value>
                <value>
                    <fullName>Ferric Chloride</fullName>
                </value>
                <value>
                    <fullName>Ferric Sulfate</fullName>
                </value>
                <value>
                    <fullName>Sodium Hydroxide</fullName>
                </value>
                <value>
                    <fullName>USP-OC31</fullName>
                </value>
                <value>
                    <fullName>Peracetic Acid</fullName>
                </value>
                <value>
                    <fullName>Sodium Bisulfite</fullName>
                </value>
                <value>
                    <fullName>Nitrate</fullName>
                </value>
                <value>
                    <fullName>Ferrous Sulfate</fullName>
                </value>
                <value>
                    <fullName>Sodium Persulfate</fullName>
                </value>
                <value>
                    <fullName>Klozur</fullName>
                </value>
                <value>
                    <fullName>Cloevis Precursor</fullName>
                </value>
                <value>
                    <fullName>Sulfelox</fullName>
                </value>
                <value>
                    <fullName>Chelated Fe</fullName>
                </value>
                <value>
                    <fullName>Calcium Hydroxide</fullName>
                </value>
                <value>
                    <fullName>Sodium Hypochlorite</fullName>
                </value>
                <value>
                    <fullName>Permanganates Sodium</fullName>
                </value>
                <value>
                    <fullName>Permanganates Potassium</fullName>
                </value>
                <value>
                    <fullName>Magnesium Hydroxide</fullName>
                </value>
                <value>
                    <fullName>Hydrochloric Acid</fullName>
                </value>
                <value>
                    <fullName>Sulfuric Acid</fullName>
                </value>
                <value>
                    <fullName>Nitric Acid</fullName>
                </value>
                <value>
                    <fullName>Citric Acid</fullName>
                </value>
                <value>
                    <fullName>Acetic Acid</fullName>
                </value>
                <value>
                    <fullName>Caustic Soda</fullName>
                </value>
                <value>
                    <fullName>Sodium Percarbonate</fullName>
                </value>
                <value>
                    <fullName>Specialty oxidants (USP-OC31E)</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Service/Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_PO_Duration__c</fullName>
        <inlineHelpText>Months</inlineHelpText>
        <label>Contract/PO Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_PO_End_Date__c</fullName>
        <label>Contract/PO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_PO_Start_Date__c</fullName>
        <label>Contract/PO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year_Revenue__c</fullName>
        <formula>IF(
AND(
YEAR( Contract_PO_Start_Date__c ) = YEAR(TODAY()),
YEAR( ADDMONTHS( Contract_PO_Start_Date__c ,  Contract_PO_Duration__c ) ) = YEAR(TODAY())
),
Amount ,
IF(
AND(
YEAR( Contract_PO_Start_Date__c ) &lt; YEAR(TODAY()),
YEAR( ADDMONTHS( Contract_PO_Start_Date__c , Contract_PO_Duration__c ) ) &gt; YEAR(TODAY())
),
12 * ( Amount / Contract_PO_Duration__c),
IF(
AND(
YEAR( Contract_PO_Start_Date__c ) = YEAR(TODAY()),
YEAR(ADDMONTHS( Contract_PO_Start_Date__c , Contract_PO_Duration__c )) &gt; YEAR(TODAY())
),
(12 - MONTH( Contract_PO_Start_Date__c )) * ( Amount / Contract_PO_Duration__c),
IF(
AND(
YEAR( Contract_PO_Start_Date__c ) &lt; YEAR(TODAY()),
YEAR(ADDMONTHS( Contract_PO_Start_Date__c , Contract_PO_Duration__c )) = YEAR(TODAY())
),
MONTH(ADDMONTHS( Contract_PO_Start_Date__c , Contract_PO_Duration__c )) * ( Amount / Contract_PO_Duration__c),
0))))</formula>
        <label>Current Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers__c</fullName>
        <label>Drivers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Environmental REgs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Amount__c</fullName>
        <formula>Amount /  Contract_PO_Duration__c</formula>
        <label>Estimated Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_Year__c</fullName>
        <label>Estimated Revenue Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographical_Region__c</fullName>
        <label>Geographical Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEADPROJECTMANAGER__c</fullName>
        <label>Lead Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>George Benns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NEXT_STEP__c</fullName>
        <label>Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_CoOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity CoOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Muncipal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic_Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X450Days__c</fullName>
        <formula>ADDMONTHS( X90days__c,12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>450Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X90days__c</fullName>
        <formula>ADDMONTHS(NOW(),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90days</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Central_Region_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Central Region View</label>
        <sharedTo>
            <group>Central_Region</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>East_Regional_Territories</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Picklist__c</field>
            <operation>equals</operation>
            <value>East Region</value>
        </filters>
        <label>Mid - Atlantic Opportunities -SK</label>
        <sharedTo>
            <group>Mid_Atlantic_Territory</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mountain_West_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Chemical_Global__c</columns>
        <columns>Chemical__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>Mountain West Opps</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>West_region</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Estimated_Monthly_Amount__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>West Region</label>
        <sharedTo>
            <group>Northern_CA</group>
            <group>Northwest</group>
            <group>South_West</group>
            <group>Southern_CA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <validationRules>
        <fullName>Contract_End_Date_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISNEW()</errorConditionFormula>
        <errorMessage>Please Enter Contract/PO End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Contract_PO_Start_Date__c    &lt;=   CloseDate</errorConditionFormula>
        <errorMessage>Ensure Contract/PO Start Date is greater than or equal to Close Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Req</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
(ISPICKVAL( StageName , &apos;5 - Closed/Won&apos;)),
(ISBLANK( Contract_PO_Start_Date__c ) ) )</errorConditionFormula>
        <errorMessage>Enter Contract/PO Start Date</errorMessage>
    </validationRules>
</CustomObject>